--- a/index.html
+++ b/index.html
@@ -201,11 +201,11 @@
                     <td></td>
                     <td>전공찾기팝업 - 조회/선택/등록</td>
                     <td>UI_ADHPAbP07</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/09_UI_ADHPAbP07.html" target="_blank">PC</a>
-                        <a href="./mobile/09_UI_ADHPAbP07.html" target="_blank" class="none">MO</a>
+                        <a href="./mobile/09_UI_ADHPAbP07.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -217,11 +217,11 @@
                     <td></td>
                     <td>전공찾기팝업 - 조회/선택/등록(계열분류)</td>
                     <td>UI_ADHPAbP08</td>
-                    <td class="status">PC완료</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/10_UI_ADHPAbP08.html" target="_blank">PC</a>
-                        <a href="./mobile/10_UI_ADHPAbP08.html" target="_blank" class="none">MO</a>
+                        <a href="./mobile/10_UI_ADHPAbP08.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
