--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
                     <td>
                         <a href="./pc/02_UI_ADHPAaM02.html" target="_blank">PC</a>
                         <a href="./mobile/02_UI_ADHPAaM02.html" target="_blank">MO</a>
+                        <a href="./mobile/02_UI_ADHPAaM02_pop.html" target="_blank">MO-Pop</a>
                     </td>
                 </tr>
                 <tr>
@@ -500,7 +501,7 @@
             </tbody>
         </table>
     </body>
-    <script>
+    <!-- <script>
         document.addEventListener('DOMContentLoaded', function () {
             const moLinks = document.querySelectorAll('td a:not(:first-child)');
 
@@ -516,5 +517,5 @@
                 });
             });
         });
-    </script>
+    </script> -->
 </html>
