--- a/mobile/09_UI_ADHPAbP07.html
+++ b/mobile/09_UI_ADHPAbP07.html
@@ -22,7 +22,7 @@
                 <div class="mypage">
                     <div class="progmg allcare">
                         <!-- 팝업 시작 -->
-                        <div class="popup_full in_page newpop_regi newpop_page" role="dialog" aria-modal="true" aria-labelledby="popupTitle" style="display: block;"> 
+                        <div class="popup_full in_page newpop_major newpop_page" role="dialog" aria-modal="true" aria-labelledby="popupTitle" style="display: block;"> 
                             <div class="popup_header">
                                 <h2 class="popup_title">전공 찾기</h2>
                                 <button type="button" class="popup_close"><span class="blind">팝업 닫기</span></button>
@@ -34,12 +34,11 @@
                                     <button type="button" class="btn middle white" onclick="">검색</button>
                                 </div>
 
-
                                 <div class="categroy_inner">
                                     <div class="category_lv lv_1">
                                         <div class="category_tit" id="categoryLv1Tit"><h5>1차 계열</h5></div>
                                         <div class="category_placeholder" id="lv1Container" aria-labelledby="categoryLv1Tit">
-                                            <p class="category_placeholder_txt">1차 계열을 선택하세요</p>
+                                            <p class="category_placeholder_txt fix_text">1차 계열을 선택하세요</p>
                                             <div class="category_lv_dimmed" style="display: none;"></div>
                                             <div class="category_list_flot" role="list" aria-labelledby="categoryLv1Tit" id="lv1List" style="display: none;">
                                                 <ul>
@@ -59,7 +58,7 @@
                                     <div class="category_lv lv_2">
                                         <div class="category_tit" id="categoryLv2Tit"><h5>2차 계열</h5></div>
                                         <div class="category_placeholder" id="lv2Container" aria-labelledby="categoryLv2Tit">
-                                            <p class="category_placeholder_txt">2차 계열을 선택하세요.</p>
+                                            <p class="category_placeholder_txt fix_text">2차 계열을 선택하세요</p>
                                             <div class="category_lv_dimmed" style="display: none;"></div>
                                             <div class="category_list_flot" role="list" aria-labelledby="categoryLv2Tit" id="lv2List" style="display: none;">
                                                 <ul>
@@ -90,7 +89,7 @@
                                     <div class="category_lv lv_3">
                                         <div class="category_tit" id="categoryLv3Tit"><h5>3차 계열</h5></div>
                                         <div class="category_placeholder" id="lv3Container" aria-labelledby="categoryLv3Tit">
-                                            <p class="category_placeholder_txt">3차 계열을 선택하세요.</p>
+                                            <p class="category_placeholder_txt fix_text">3차 계열을 선택하세요</p>
                                             <div class="category_lv_dimmed" style="display: none;"></div>
                                             <div class="category_list_flot" role="list" aria-labelledby="categoryLv3Tit" id="lv3List" style="display: none;">
                                                 <ul>
@@ -108,6 +107,8 @@
                                             </div>
                                         </div>
                                     </div>
+
+
                                 </div>
                                 <script>
                                     document.querySelectorAll('.category_placeholder').forEach(container => {
